Changed link field width to avoid overflow

--- a/dnd/WildShape/style.css
+++ b/dnd/WildShape/style.css
@@ -3,7 +3,7 @@
   left:0;
   top:140px;
   columns:4;
-  width: 50%;
+  width: 60%;
 }
 #frame {
   position:fixed;
